# projetIA

./: CMakeLists.txt  README.md
src/: Apprentissage.h  Apprentissage.tpp  Apprentissage2.h  Apprentissage2.tpp  Fonction_activation.cpp  Fonction_activation.h  Image.cpp  Image.h  Input.cpp  Input.h  Input_intermediaire.cpp  Input_intermediaire.h  Input_intermediare.cpp  Iris.cpp  Iris.h  NN.cpp  NN.h  NN1.cpp  NN1.h  NN2.cpp  NN2.h  Perceptron.cpp  Perceptron.h  Perceptron_cachee.cpp  Perceptron_cachee.h  Sigmoide.cpp  Sigmoide.h  Tanh.cpp  Tanh.h  apprentissage.cpp  apprentissage.h  fonction.cpp  fonction.h  main.cpp  perceptron.cpp  perceptron.h
